@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.995-6
-Date: 2006-03-15
+Version: 0.995-7
+Date: 2006-03-16
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
